// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fela identifier enhancer identifier rule should be combined with usual style rules 1`] = `
Object {
  "--fela-identifier-0": "",
  "color": "red",
  "fontSize": "12px",
}
`;

exports[`Fela identifier enhancer identifier rule should not be contained in the output css 1`] = `".a{color:red}.b{font-size:12px}"`;

exports[`Fela identifier enhancer rule can have references to several identifiers 1`] = `"fela-identifier-0 fela-identifier-1 a b"`;

exports[`Fela identifier enhancer should be thrown error if the identifier was not used as an enhancer 1`] = `"You are trying to create a new identifier before how you used the identifier as an enhancer. Please add the identifier as an enhancer in the configuration of the renderer."`;

exports[`Fela identifier enhancer should produce rule with custom property 1`] = `
Array [
  Object {
    "--fela-identifier-0": "",
  },
  Object {
    "--fela-identifier-1": "",
  },
]
`;
